# personal-finance-intelligence

./: .gitignore  Makefile  README.md  pyproject.toml
api/: main.py
docs/: mkdocs.yml
docs/docs/: index.md
finance/: __init__.py  dataset.py  features.py  plots.py
finance/modeling/: predict.py  train.py
finance/models/: __init__.py  ledger.py  transaction.py  user.py
tests/unit/models/: test_transaction.py  test_user.py
ui/: dashboard.py
